ensure correct wrapping in all browsers

--- a/output/theme/scss/components/_tag.scss
+++ b/output/theme/scss/components/_tag.scss
@@ -43,7 +43,7 @@
     &--read-more {
         float: left;
         max-width: 100%;
-        text-wrap: auto;
+        text-wrap: wrap;
     }
 
     &--see-in-projects {
