--- a/output/theme/scss/main.css
+++ b/output/theme/scss/main.css
@@ -245,7 +245,7 @@ footer {
   .tag--read-more {
     float: left;
     max-width: 100%;
-    text-wrap: auto; }
+    text-wrap: wrap; }
   .tag--see-in-projects {
     float: left; }
   .tag a {
